--- a/config_train.json
+++ b/config_train.json
@@ -12,5 +12,6 @@
     "adam_par": {"lr": 0.001, "betas": [0.9, 0.999], "eps":1e-08},
     "batch_size": 16,
     "epochs": 50,
-    "accept_lev": 0.5
+    "accept_lev": 0.5,
+    "early": 5
 }
